--- a/blogIndex/index.html
+++ b/blogIndex/index.html
@@ -7,20 +7,23 @@ title: Index
 
 ---
 
-{% assign mydocs = site.posts | group_by: 'category' %}
+{% assign mydocs = site.posts | group_by: 'caty' %}
+{% assign fullUrl = site.url | append site.baseurl %}
+
 {% for doc in mydocs %}
 <h2> {{ doc.name | capitalize }}</h2>
-    {% assign subdocs = doc.items | group_by: 'subcategory' %}
+    {% assign subdocs = doc.items | group_by: 'subcaty' %}
     <ol>
        {% for sdoc in subdocs %}
             <li>
                 <h4> {{ sdoc.name | capitalize }} </h4>
                 <ul>
                 {% for item in sdoc.items %}
-                   <li><a href="{{ item.url }}">{{ item.title }}</a></li>
+                   <li><a href="{{ url | append site.baseurl | append item.url }}">{{ item.title }}</a></li>
                 {% endfor %}
                 </ul>
             </li>
         {% endfor %}
     </ol>
 {% endfor %}
+
